src/test/resources/Parser/SyntaxErrors/NonOptionalExMark.front
class A:
    fun(a: int32) {
        a!;
    }